// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Google maps renders a map with current location 1`] = `
<APIProvider
  apiKey=""
>
  <GoogleMap
    autoZoom={true}
    className=""
    currentLocation={
      {
        "latitude": 51.906688,
        "longitude": 4.48837,
        "url": "image:url",
      }
    }
    fullscreenControl={false}
    height={75}
    heightUnit="pixels"
    locations={[]}
    mapId="DEMO_MAP_ID"
    mapTypeControl={false}
    mapsToken=""
    optionDrag={true}
    optionScroll={true}
    optionZoomControl={true}
    rotateControl={false}
    showCurrentLocation={true}
    streetViewControl={false}
    style={{}}
    width={50}
    widthUnit="percentage"
    zoomLevel={10}
  />
</APIProvider>
`;

exports[`Google maps renders a map with markers 1`] = `
<APIProvider
  apiKey=""
>
  <GoogleMap
    autoZoom={true}
    className=""
    fullscreenControl={false}
    height={75}
    heightUnit="pixels"
    locations={
      [
        {
          "latitude": 51.906688,
          "longitude": 4.48837,
          "title": "Mendix HQ",
          "url": "image:url",
        },
        {
          "latitude": 51.922823,
          "longitude": 4.479632,
          "title": "Gementee Rotterdam",
          "url": "image:url",
        },
      ]
    }
    mapId="DEMO_MAP_ID"
    mapTypeControl={false}
    mapsToken=""
    optionDrag={true}
    optionScroll={true}
    optionZoomControl={true}
    rotateControl={false}
    showCurrentLocation={false}
    streetViewControl={false}
    style={{}}
    width={50}
    widthUnit="percentage"
    zoomLevel={10}
  />
</APIProvider>
`;

exports[`Google maps renders a map with percentage of parent units renders the structure correctly 1`] = `
<APIProvider
  apiKey=""
>
  <GoogleMap
    autoZoom={true}
    className=""
    fullscreenControl={false}
    height={75}
    heightUnit="percentageOfParent"
    locations={[]}
    mapId="DEMO_MAP_ID"
    mapTypeControl={false}
    mapsToken=""
    optionDrag={true}
    optionScroll={true}
    optionZoomControl={true}
    rotateControl={false}
    showCurrentLocation={false}
    streetViewControl={false}
    style={{}}
    width={50}
    widthUnit="percentage"
    zoomLevel={10}
  />
</APIProvider>
`;

exports[`Google maps renders a map with percentage of width and height units renders the structure correctly 1`] = `
<APIProvider
  apiKey=""
>
  <GoogleMap
    autoZoom={true}
    className=""
    fullscreenControl={false}
    height={75}
    heightUnit="percentageOfWidth"
    locations={[]}
    mapId="DEMO_MAP_ID"
    mapTypeControl={false}
    mapsToken=""
    optionDrag={true}
    optionScroll={true}
    optionZoomControl={true}
    rotateControl={false}
    showCurrentLocation={false}
    streetViewControl={false}
    style={{}}
    width={50}
    widthUnit="percentage"
    zoomLevel={10}
  />
</APIProvider>
`;

exports[`Google maps renders a map with pixels renders structure correctly 1`] = `
<APIProvider
  apiKey=""
>
  <GoogleMap
    autoZoom={true}
    className=""
    fullscreenControl={false}
    height={75}
    heightUnit="pixels"
    locations={[]}
    mapId="DEMO_MAP_ID"
    mapTypeControl={false}
    mapsToken=""
    optionDrag={true}
    optionScroll={true}
    optionZoomControl={true}
    rotateControl={false}
    showCurrentLocation={false}
    streetViewControl={false}
    style={{}}
    width={50}
    widthUnit="pixels"
    zoomLevel={10}
  />
</APIProvider>
`;

exports[`Google maps renders a map with right structure 1`] = `
<APIProvider
  apiKey=""
>
  <GoogleMap
    autoZoom={true}
    className=""
    fullscreenControl={false}
    height={75}
    heightUnit="percentageOfWidth"
    locations={[]}
    mapId="DEMO_MAP_ID"
    mapTypeControl={false}
    mapsToken=""
    optionDrag={true}
    optionScroll={true}
    optionZoomControl={true}
    rotateControl={false}
    showCurrentLocation={false}
    streetViewControl={false}
    style={{}}
    width={50}
    widthUnit="pixels"
    zoomLevel={10}
  />
</APIProvider>
`;
